# clox

./: .clang-format  .gitignore  Makefile  README.md  meson.build
src/: chunk.c  chunk.h  common.h  compiler.c  compiler.h  debug.c  debug.h  log.c  log.h  main.c  memory.c  memory.h  meson.build  object.c  object.h  scanner.c  scanner.h  table.c  table.h  value.c  value.h  vm.c  vm.h
tests/: main.c  meson.build  scanner_tests.c  table_tests.c  value_tests.c
